Address review + SonarCloud on Iceberg discovery/upload
Code review fixes:
- IcebergMetadataUploaderService: increment the table-processing failure
  counter on the four non-exception failure returns (checkpoint fetch,
  init, presigned-URL, upsert) so API-level failures show on dashboards,
  not just exceptions.
- Document that the numeric pickLatestMetadataJson fallback can select an
  uncommitted metadata.json; hint / version-hint.text are authoritative.
- Note that thenComposeAsync uses the default pool intentionally (non-
  blocking glue) and that metadataLocationHint only applies to #tableId-
  pinned base paths, not auto-discovery.

SonarCloud:
- S6204: Stream.collect(toList()) -> Stream.toList() in
  IcebergMetadataUploaderService and TableDiscoveryService (drop now-
  unused Collectors imports).
- S5411: avoid Boolean unboxing in processTable (Boolean.FALSE.equals).
- S6068: remove useless eq() matchers in TestIcebergTableFormatDetector.
- S5843 (regex complexity) skipped: reducing it 21->20 without loosening
  URL validation is not worth the risk for a non-gating smell.

Coverage (quality gate was failing new_coverage at 41.3%):
- Add instance-pipeline tests for IcebergMetadataUploaderService
  (uploadInstantsInTables, processTable, parse/init/upload/upsert,
  version-hint resolution, hint fast-path, failure branches) ->
  ~97% line coverage on the class.
- Add dispatchUpload format-routing test to TableDiscoveryAndUploadJobTest.

Docs: new docs/iceberg-support.md covering the detector SPI, tableFormat
declaration, three-tier metadata.json resolution, and the cross-repo
deploy ordering (idls -> gateway-controller -> LakeView).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>